--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,24 +1,18 @@
-<div class='container'>
-  <div class="row">
-    {{#each burger_data}}
-      {{#unless this.devoured}}
-    <div class="col-xs-2 col-sm-3 col-md-4 uneaten">
-      <pre>{{this.id}}. {{this.burger_name}}</pre>  
-      <br>
-      <br>
-        <h3>Burger Menu</h3>
-      <form method="POST" action="/burgers/update?_method=PUT" class="button-size">
-        <input type="hidden" name="burger_id" type="text" value={{this.id}}>
-          <br>
-          <button type="submit" class="btn btn-warning btn-xs" id="devour">Devour It!</button>        
-        {{/unless}}  
+<div class="row">
+  <div class="col-xs-2 col-sm-3 col-md-4 uneaten">
+      <h3>Burger Menu</h3>
+    <form action="/{{this.id}}?_method=DELETE" method="POST">
+      {{#each burgers}}
+        
+          <p>{{this.id}}. {{this.burger_name}}  <button type="submit" class="btn btn-warning btn-xs" id="devour">Devour</button></p>        
+        
       {{/each}}
-      </form>
-    </div>
-    <div class="col-xs-8 col-sm-6 col-md-4 centered" id="sign">
-        <img src="assets/img/burger.jpeg">
-        <h1>Eat-Da-Burger!</h1></div>
-    <div class="col-xs-2 col-sm-3 col-md-4"></div>
+    </form>
+  </div>
+  <div class="col-xs-8 col-sm-6 col-md-4 text-center" id="sign">
+  		<img src="assets/img/burger.jpeg">
+  		<h1>Eat-Da-Burger!</h1></div>
+  <div class="col-xs-2 col-sm-3 col-md-4"></div>
 </div>
 
 <div class="row">
@@ -27,14 +21,13 @@
   <div class="col-xs-8 col-sm-6 col-md-4 text-center" id="addBurger">
   	<form method="POST" action="/create">
   		<p>Enter the kind of burger you like.</p>
-      <p> Then click 'Add Burger'.</p>
-  		<input name="burger" type="text" id="burger-search" class="form-control">
+      <p>Then click "add Burger"</p>
+  		<textarea class="form-control" rows="2"></textarea>
       <br>
-		  <button class="btn btn-primary btn-md" type="submit" id="submit"><span class="glyphicon glyphicon-search"></span> Add Burger</button>
+		  <button type="submit" class="btn btn-primary btn-md" id="submit">Add Burger</button>
 	  </form>	
   </div>
   <div class="col-xs-2 col-sm-3 col-md-4">
     
   </div>
-</div>
 </div>
